# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/formatters/: plain_formatter.py  stylish.py  stylish_formatter.py
gendiff/scripts/: __init__.py  gendiff.py  main.py  parser.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/: expected_result_plain.txt
