[project]
name = "hexlet-code"
version = "0.1.0"
description = """CLI tool for comparing configuration files (JSON, YAML) 
and generating difference reports in various formats
"""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml >= 6.0"
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.4.1",
    "flake8 >= 7.0",
    "black >= 24.0",
]

[project.scripts]
gendiff = "gendiff.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]